--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -5,4 +5,5 @@ Api.GetAllBookingsIds.Endpoint=/booking
 Api.stepDefinitions.CreateBooking.Endpoint=/booking
 Api.UpdateBooking.Endpoint=/booking
 Api.DeleteBooking.Endpoint=/booking
+token=6a5e53df32eb65e
 
